--- a/style/styles.css
+++ b/style/styles.css
@@ -1,18 +1,23 @@
+/* General Styles */
+
 * {
     font-family: Helvetica;
     color: seashell;
     opacity: 0.9;
     text-align: center;
-}
-
-body {
     background-color: black;
 }
 
 ul li {
     list-style: none;
-    font-size: 22px;;
+    font-size: 22px;
 }
+
+a {
+    color: seashell;
+}
+
+
 
 .header {
     display: flex;
@@ -60,6 +65,7 @@ margin: auto;
 
 .mission {
     background-color: black;
+    opacity: 1;
     width: 100%;
     height: 100px;
     display: flex;
@@ -70,7 +76,6 @@ margin: auto;
 
 .tea {
     width: 1000px;
-
     display: inline-flex;
     flex-direction: column;
 
@@ -89,4 +94,58 @@ margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+
+.l-head, .l-summary {
+    background-color: transparent !important;
+}
+
+.locations {
+    background-image: url("../resources/img-locations-background.webp");
+    width: 1200px;
+    height: 500px;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.l-head {
+    margin-bottom: 15px;
+}
+
+.l-summary {
+    display: flex;
+    height: 300px;
+}
+
+.l-details {
+    background-color: black !important;
+    opacity: 1 !important;
+    width: 300px;
+    height: 300px;
+    margin: 0px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+
+/* Footer Styles */
+
+.footer {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.footer h2, .footer h5 {
+    margin: 0;
+}
+
+.copyright {
+    margin-left: 20px;
+    text-align: left;
 }
